--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-scripts": "3.4.3",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "save": "^2.4.0"
   },
   "scripts": {
