--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "save": "^2.4.0"
   },
   "scripts": {
